--- a/templates/login.html
+++ b/templates/login.html
@@ -22,25 +22,13 @@
 </header>
 
 <section>
-  <nav>
-    <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="/task.html">Open Tasks</a></li>
-      <li><a href="gmailapi.html">Tasks Email API</a></li>
-      <li><a href="#">Project overview</a></li>
-      <li><a href="/logout">Logout</a></li>
-    </ul>
-  </nav>
+<h3>This is login - hello!!
+
+  Click here to login <li><a href="/processlogin">Login</a></li>
   
-  <tasks>
-    
-<p>This is index.html</p>
-
-<p>Welcome to Brendans Super tasks - im a busy man !!!</p>
-<p>Select an option from the menu on the left</p>
+  At the minute no credentials are required but you do need to pass through this page !!!</h3>
 
 
-  </tasks>
 </section>
 
 <footer>
