--- a/templates/index.html
+++ b/templates/index.html
@@ -5,23 +5,22 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-
+<!-- js import -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-            
+
+<!-- link to my stylesheet and bootstrap css  -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-
 <link rel="stylesheet" href="../mystyle.css">
-
 
 </head>
 <body>
 <header>
   <h2>Brendans Super Tasks</h2>
 </header>
-
+<!--my section div -->
 <section>
+  <!--my side navigation -->
   <nav>
     <ul>
       <li><a href="/">Home</a></li>
@@ -39,6 +38,8 @@
 <p>Welcome to Brendans Super tasks - im a busy man !!!</p>
 <p>Select an option from the menu on the left</p>
 
+<p><a href="http://brenbiz.eu.pythonanywhere.com/">Link to my Python Anywhere</a></p>
+
 
   </tasks>
 </section>
@@ -46,6 +47,8 @@
 <footer>
   <p>(c) Brendan Ryan GMIT</p>
 </footer>
+
+<!--js any scripts go here -->
 <script>
     
 </script>
