--- a/templates/login.html
+++ b/templates/login.html
@@ -5,9 +5,10 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-
+<!-- js import -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-            
+ 
+<!-- link to my stylesheet and bootstrap css  -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
@@ -20,20 +21,23 @@
 <header>
   <h2>Brendans Super Tasks</h2>
 </header>
-
+<!--my section div -->
 <section>
 <h3>This is login - hello!!
 
-  Click here to login <li><a href="/processlogin">Login</a></li>
+  Click below to login <br>
+  <p><a href="/processlogin">Login</a></p>
   
-  At the minute no credentials are required but you do need to pass through this page !!!</h3>
-
-
+  At the minute no credentials are required but you do need to pass through this page !!!
+<br><br>
+  <p>link to pytonanywhere <a href="http://brenbiz.eu.pythonanywhere.com/">Link to my Python Anywhere</a></p>
+</h3>
 </section>
 
 <footer>
   <p>(c) Brendan Ryan GMIT</p>
 </footer>
+<!--js any scripts go here -->
 <script>
     
 </script>
